- fixed NPE from readObject